[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Inclined_Road.gd" type="Script" id=1]
[ext_resource path="res://Textures/Placeholders_new/road desert slope.png" type="Texture" id=2]
[ext_resource path="res://Textures/Placeholders_new/road desert big.png" type="Texture" id=3]

[sub_resource type="GDScript" id=1]
script/source = "extends Node2D

# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.

func move_colliders( speed ):
	print(  $StaticBody2D2.position )
	$StaticBody2D2.position.x    -= speed
	$StaticBody2D3.position.x    -= speed
	$StaticBody2D4.position.x    -= speed"

[node name="Back4" type="Node2D"]
z_index = 150
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 720.262, 948.415 ],
"_edit_vertical_guides_": [ 8232.15 ]
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true

[node name="Sprite" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 2551.14, 1140.66 )
scale = Vector2( 0.6, 0.6 )
z_index = 10
z_as_relative = false
texture = ExtResource( 2 )

[node name="Sprite5" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 4771.79, 1032 )
scale = Vector2( 0.6, 0.6 )
z_index = 10
z_as_relative = false
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 9368.31, 1030.86 )
scale = Vector2( 0.6, 0.6 )
z_index = 120
texture = ExtResource( 2 )
flip_h = true

[node name="Sprite4" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 11609.5, 1140.75 )
scale = Vector2( 0.6, 0.6 )
z_index = 120
texture = ExtResource( 2 )
flip_h = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1000, 0 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 7074, 974 )
scale = Vector2( 0.6, 0.6 )
z_index = 10
texture = ExtResource( 3 )

[node name="End_rise_mark" type="Node2D" parent="."]
position = Vector2( 5917.07, 715.244 )

[node name="End_high_mark" type="Node2D" parent="."]
position = Vector2( 9212.94, 705.588 )

[node name="End_fall_mark" type="Node2D" parent="."]
position = Vector2( 13770.9, 877.061 )

[node name="Colliders" type="Node2D" parent="."]
position = Vector2( 0, 52 )
script = SubResource( 1 )

[node name="StaticBody2D2" type="StaticBody2D" parent="Colliders" groups=[
"floor",
]]
scale = Vector2( 3.35939, 0.998225 )
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Colliders/StaticBody2D2" groups=[
"floor",
]]
position = Vector2( 693.09, 885.699 )
scale = Vector2( 0.364871, 1 )
build_mode = 1
polygon = PoolVector2Array( 2943.18, -42.697, -752.606, 44.568, -1203.88, 27.253, 2940.8, -220.037 )

[node name="StaticBody2D3" type="StaticBody2D" parent="Colliders" groups=[
"floor",
]]
position = Vector2( -995, 0 )
scale = Vector2( 3.35939, 0.998225 )
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Colliders/StaticBody2D3" groups=[
"floor",
]]
position = Vector2( 1488.14, 821.528 )
scale = Vector2( 0.364871, 1 )
build_mode = 1
polygon = PoolVector2Array( 3428.98, 26.3181, 3448.55, -155.463, 7266.2, 69.4387, 7247.67, 105.856 )

[node name="StaticBody2D4" type="StaticBody2D" parent="Colliders" groups=[
"floor",
]]
scale = Vector2( 3.35939, 0.998225 )
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Colliders/StaticBody2D4" groups=[
"flooor",
]]
position = Vector2( 508.032, 848.303 )
scale = Vector2( 0.364871, 1 )
build_mode = 1
polygon = PoolVector2Array( 3433.8, -6.92877, 3433.92, -180.717, 5326.47, -177.45, 5340.12, -0.153564 )
